--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,4 +7,7 @@ readme = "README.md"
 license = "MIT"
 license-files = "LICENSE"
 requires-python = ">=3.14"
-dependencies = []
+dependencies = [
+    "fastapi>=0.128.0",
+    "uvicorn[standard]>=0.40.0",
+]
