--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ license-files = "LICENSE"
 requires-python = ">=3.14"
 dependencies = [
     "fastapi>=0.128.0",
+    "pydantic-settings>=2.12.0",
     "uvicorn[standard]>=0.40.0",
 ]
 
