--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,8 +8,10 @@ license = "MIT"
 license-files = "LICENSE"
 requires-python = ">=3.14"
 dependencies = [
+    "asyncpg>=0.31.0",
     "fastapi>=0.128.0",
     "pydantic-settings>=2.12.0",
+    "sqlalchemy[asyncio]>=2.0.45",
     "uvicorn[standard]>=0.40.0",
 ]
 
