--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ license = "MIT"
 license-files = "LICENSE"
 requires-python = ">=3.14"
 dependencies = [
+    "alembic>=1.18.0",
     "asyncpg>=0.31.0",
     "fastapi>=0.128.0",
     "pydantic-settings>=2.12.0",
