--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "alembic>=1.18.0",
     "asyncpg>=0.31.0",
     "fastapi>=0.128.0",
+    "psycopg[binary]>=3.3.2",
     "pydantic-settings>=2.12.0",
     "sqlalchemy[asyncio]>=2.0.45",
     "uvicorn[standard]>=0.40.0",
